fix text vertical alignment in firefox

--- a/crawler_app/crawler_app/static/css/d3_css.css
+++ b/crawler_app/crawler_app/static/css/d3_css.css
@@ -17,6 +17,7 @@
 
 .label {
   font: 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  dominant-baseline: middle;
   text-anchor: middle;
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
 }
